try to create API to access database file
